--- a/test.html
+++ b/test.html
@@ -39,8 +39,8 @@ p {
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>https://localhost.rewview.co.kr:9088</span>
-        <iframe src="https://localhost.rewview.co.kr:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
+        <span>https://127.0.0.1:9088</span>
+        <iframe src="https://127.0.0.1:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="70%"
         height="400px"
         style="border: none;"></iframe>
