--- a/test.html
+++ b/test.html
@@ -27,15 +27,16 @@ p {
         <iframe src="http://127.0.0.1:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="70%"
         height="400px"
-        style="border: none;"></iframe>
+        style="border: none;" sandbox="allow-scripts allow-popups"></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>http://localhost:9080</span>
-        <iframe src="http://localhost:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
+        <span>https://localhost.rewview.co.kr:9088</span>
+        <iframe src="http://localhost.rewview.co.kr:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="70%"
         height="400px"
-        style="border: none;"></iframe>
+        style="border: none;"
+          sandbox="allow-scripts allow-popups"></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
@@ -43,7 +44,7 @@ p {
         <iframe src="https://127.0.0.1:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="70%"
         height="400px"
-        style="border: none;"></iframe>
+        style="border: none;" sandbox="allow-scripts allow-popups"></iframe>
     </div>
     
     
