--- a/test.html
+++ b/test.html
@@ -23,28 +23,27 @@ p {
 <p>This is a paragraph.</p>
 
     <div style="display: flex; flex-direction: column;">
-        <span>http://127.0.0.1:9080</span>
+        <span>1.http://127.0.0.1:9080</span>
         <iframe src="http://127.0.0.1:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="70%"
         height="400px"
-        style="border: none;" sandbox="allow-scripts allow-popups"></iframe>
+        style="border: none;" sandbox="allow-scripts allow-popups allow-same-origin"></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>https://localhost.rewview.co.kr:9088</span>
-        <iframe src="http://localhost.rewview.co.kr:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
+        <span>2.https://localhost.rewview.co.kr:9088</span>
+        <iframe src="https://localhost.rewview.co.kr:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="70%"
         height="400px"
-        style="border: none;"
-          sandbox="allow-scripts allow-popups"></iframe>
+        style="border: nonesandbox="allow-scripts allow-popups allow-same-origin"></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>https://127.0.0.1:9088</span>
+        <span>3.https://127.0.0.1:9088</span>
         <iframe src="https://127.0.0.1:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="70%"
         height="400px"
-        style="border: none;" sandbox="allow-scripts allow-popups"></iframe>
+        style="border: none;" sandbox="allow-scripts allow-popups allow-same-origin"></iframe>
     </div>
     
     
