--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@ p {
         <iframe src="https://localhost.rewview.co.kr:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="70%"
         height="400px"
-        style="border: nonesandbox="allow-scripts allow-popups allow-same-origin"></iframe>
+        style="border: none;" sandbox="allow-scripts allow-popups allow-same-origin"></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
