--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@ p {
         <iframe src="http://127.0.0.1:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="100%"
         height="300px"
-        style="border: none;" sandbox="llow-forms allow-scripts allow-popups allow-same-origin"></iframe>
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin"></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
@@ -35,7 +35,7 @@ p {
         <iframe src="https://localhost.rewview.co.kr:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="100%"
         height="300px"
-        style="border: none;" sandbox="llow-forms allow-scripts allow-popups allow-same-origin"></iframe>
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin"></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
@@ -43,7 +43,7 @@ p {
         <iframe src="https://127.0.0.1:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="100%"
         height="300px"
-        style="border: none;" sandbox="llow-forms allow-scripts allow-popups allow-same-origin"></iframe>
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin"></iframe>
     </div>
     
     
