--- a/test.html
+++ b/test.html
@@ -39,8 +39,8 @@ p {
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>3.https://127.0.0.1:9088</span>
-        <iframe src="https://127.0.0.1:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
+        <span>3.https://rewdev01c.rewview.co.kr:9443/cms/ReportGuest.wss?campaign_idx=v1K%252F68LhP3s%253D</span>
+        <iframe src="https://rewdev01c.rewview.co.kr:9443/cms/ReportGuest.wss?campaign_idx=v1K%252F68LhP3s%253D"
         width="100%"
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" referrerpolicy="no-referrer"></iframe>
