--- a/test.html
+++ b/test.html
@@ -23,8 +23,8 @@ p {
 <p>This is a paragraph.</p>
 
     <div style="display: flex; flex-direction: column;">
-        <span>1.http://127.0.0.1:9080</span>
-        <iframe src="http://127.0.0.1:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
+        <span>1.http://localhost:9080/cms/apps/m40/report/result/report_result.jsp?campaign_idx=1605</span>
+        <iframe src="http://localhost:9080/cms/apps/m40/report/result/report_result.jsp?campaign_idx=1605"
         width="100%"
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" referrerpolicy="no-referrer"></iframe>
