--- a/test.html
+++ b/test.html
@@ -23,11 +23,11 @@ p {
 <p>This is a paragraph.</p>
 
     <div style="display: flex; flex-direction: column;">
-        <span>1.http://localhost:9080/cms/apps/m40/report/result/report_result.jsp?campaign_idx=1605</span>
-        <iframe src="http://localhost:9080/cms/apps/m40/report/result/report_result.jsp?campaign_idx=1605"
+        <span>1.http://localhost:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D</span>
+        <iframe src="http://localhost:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="100%"
         height="300px"
-        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" referrerpolicy="no-referrer"></iframe>
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
@@ -35,7 +35,7 @@ p {
         <iframe src="https://localhost.rewview.co.kr:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
         width="100%"
         height="300px"
-        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" referrerpolicy="no-referrer"></iframe>
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
@@ -43,7 +43,7 @@ p {
         <iframe src="https://rewdev01c.rewview.co.kr:9443/cms/ReportGuest.wss?campaign_idx=v1K%252F68LhP3s%253D"
         width="100%"
         height="300px"
-        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" referrerpolicy="no-referrer"></iframe>
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
     </div>
     
     
