--- a/test.html
+++ b/test.html
@@ -19,8 +19,7 @@ p {
 </head>
 <body>
 
-<h1>My First CSS Example</h1>
-<p>This is a paragraph.</p>
+<h1>TEST</h1>
 
     <div style="display: flex; flex-direction: column;">
         <span>1.http://localhost:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D</span>
