--- a/test.html
+++ b/test.html
@@ -52,6 +52,14 @@ p {
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
     </div>
+    <br>
+    <div style="display: flex; flex-direction: column;">
+        <span>5.https://prod01web.rewview.co.kr/cms/ReportGuest.wss?campaign_idx=gsuRBNk2nfg%253D</span>
+        <iframe src="https://prod01web.rewview.co.kr/cms/ReportGuest.wss?campaign_idx=gsuRBNk2nfg%253D"
+        width="100%"
+        height="300px"
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
+    </div>
 </body>
 </html>
 
