--- a/test.html
+++ b/test.html
@@ -21,6 +21,15 @@ p {
 
 <h1>TEST</h1>
 
+    <br>
+    <div style="display: flex; flex-direction: column;">
+        <span>0.http://localhost:9080/report/result/report_result.jsp?ci=1608</span>
+        <iframe src="http://localhost:9080/report/result/report_result.jsp?ci=1608"
+        width="100%"
+        height="300px"
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
+    </div>
+    <br>
     <div style="display: flex; flex-direction: column;">
         <span>1.http://localhost:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D</span>
         <iframe src="http://localhost:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
