--- a/test.html
+++ b/test.html
@@ -23,8 +23,8 @@ p {
 
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>0.http://localhost:9080/report/result/report_result.jsp?ci=1608</span>
-        <iframe src="http://localhost:9080/report/result/report_result.jsp?ci=1608"
+        <span>0.http://localhost:9080/report/result/report.jsp?9mv2TKd8N%252FU%253D</span>
+        <iframe src="http://localhost:9080/report/result/report.jsp?9mv2TKd8N%252FU%253D"
         width="100%"
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
