--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@ p {
         <iframe src="http://localhost:9080/report/result/report.jsp?i30JKGbOe9c%253D"
         width="100%"
         height="300px"
-        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin allow-downloads" ></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
