--- a/test.html
+++ b/test.html
@@ -31,8 +31,8 @@ p {
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>1.http://localhost:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D</span>
-        <iframe src="http://localhost:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
+        <span>1.https://rewd1w.rewview.co.kr:8443/report/result/report.jsp?vNsR12%252F0dJQ%253D</span>
+        <iframe src="https://rewd1w.rewview.co.kr:8443/report/result/report.jsp?vNsR12%252F0dJQ%253D"
         width="100%"
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
