--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@ p {
         <iframe src="https://rewd1w.rewview.co.kr:8443/report/result/report.jsp?vNsR12%252F0dJQ%253D"
         width="100%"
         height="300px"
-        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin allow-downloads" ></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
