--- a/index.html
+++ b/index.html
@@ -19,34 +19,14 @@ p {
 </head>
 <body>
 
-<h1>My First CSS Example</h1>
-<p>This is a paragraph.</p>
-
     <div style="display: flex; flex-direction: column;">
-        <span>http://localhost:9080</span>
-        <iframe src="http://localhost:9080/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
-        width="70%"
-        height="200px"
-        style="border: none;"></iframe>
+        <span>1.https://rewd1w.rewview.co.kr:8443/report/result/report.jsp?vNsR12%252F0dJQ%253D</span>
+        <iframe src="https://rewd1w.rewview.co.kr:8443/report/result/report.jsp?vNsR12%252F0dJQ%253D"
+        width="100%"
+        height="500px"
+        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin allow-downloads" ></iframe>
     </div>
-    <br>
-    <div style="display: flex; flex-direction: column;">
-        <span>https://localhost.rewview.co.kr:9088</span>
-        <iframe src="https://localhost.rewview.co.kr:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
-        width="70%"
-        height="200px"
-        style="border: none;"></iframe>
-    </div>
-    
-    <br>
-    <div style="display: flex; flex-direction: column;">
-        <span>운영</span>
-        <iframe src="https://cms.rewview.co.kr/cms/ReportGuest.wss?campaign_idx=LPHJCVPaJ5A%253D"
-        width="70%"
-        height="200px"
-        style="border: none;"></iframe>
-    </div>
-    
+  
 </body>
 </html>
 
