--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ p {
 <body>
 
     <div style="display: flex; flex-direction: column;">
-        <span>1.https://rewd1w.rewview.co.kr:8443/report/result/report.jsp?vNsR12%252F0dJQ%253D</span>
-        <iframe src="https://rewd1w.rewview.co.kr:8443/report/result/report.jsp?vNsR12%252F0dJQ%253D"
+        <span>1.https://rewd1w.rewview.co.kr/report/result/report.jsp?vNsR12%252F0dJQ%253D</span>
+        <iframe src="https://rewd1w.rewview.co.kr/report/result/report.jsp?vNsR12%252F0dJQ%253D"
         width="100%"
         height="500px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin allow-downloads" ></iframe>
