--- a/test.html
+++ b/test.html
@@ -55,8 +55,8 @@ p {
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>4.https://cms.rewview.co.kr/cms/ReportGuest.wss?campaign_idx=LPHJCVPaJ5A%253D</span>
-        <iframe src="https://cms.rewview.co.kr/cms/ReportGuest.wss?campaign_idx=LPHJCVPaJ5A%253D"
+        <span>4.https://rewview.co.kr/report/result/result.jsp?BGt32ZKIygk%253D</span>
+        <iframe src="https://rewview.co.kr/report/result/result.jsp?BGt32ZKIygk%253D"
         width="100%"
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
@@ -71,8 +71,8 @@ p {
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>6.https://prod01web.rewview.co.kr/cms/ReportGuest.wss?campaign_idx=gsuRBNk2nfg%253D</span>
-        <iframe src="https://prod01web.rewview.co.kr/cms/ReportGuest.wss?campaign_idx=gsuRBNk2nfg%253D"
+        <span>6.https://rewview.co.kr/report/vNsR12%252F0dJQ%253D</span>
+        <iframe src="https://rewview.co.kr/report/vNsR12%252F0dJQ%253D"
         width="100%"
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
