--- a/test.html
+++ b/test.html
@@ -23,15 +23,15 @@ p {
 
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>-.http://localhost:9080/report/result/report.jsp?i30JKGbOe9c%253D</span>
-        <iframe src="http://localhost:9080/report/result/report.jsp?i30JKGbOe9c%253D"
+        <span>-.http://localhost:9080/r/result/report.jsp?i30JKGbOe9c%253D</span>
+        <iframe src="http://localhost:9080/r/result/report.jsp?i30JKGbOe9c%253D"
         width="100%"
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin allow-downloads" ></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>1.https://rewd1w.rewview.co.kr:8443/report/result/report.jsp?vNsR12%252F0dJQ%253D</span>
+        <span>1.https://rewd1w.rewview.co.kr:8443/r/result/report.jsp?vNsR12%252F0dJQ%253D</span>
         <iframe src="https://rewd1w.rewview.co.kr:8443/report/result/report.jsp?vNsR12%252F0dJQ%253D"
         width="100%"
         height="300px"
@@ -39,24 +39,8 @@ p {
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>2.https://localhost.rewview.co.kr:9088</span>
-        <iframe src="https://localhost.rewview.co.kr:9088/cms/ReportGuest.wss?campaign_idx=7kq9%252F1vygxY%253D"
-        width="100%"
-        height="300px"
-        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
-    </div>
-    <br>
-    <div style="display: flex; flex-direction: column;">
-        <span>3.https://rewdev01c.rewview.co.kr:9443/cms/ReportGuest.wss?campaign_idx=v1K%252F68LhP3s%253D</span>
-        <iframe src="https://rewdev01c.rewview.co.kr:9443/cms/ReportGuest.wss?campaign_idx=v1K%252F68LhP3s%253D"
-        width="100%"
-        height="300px"
-        style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
-    </div>
-    <br>
-    <div style="display: flex; flex-direction: column;">
-        <span>4.https://rewview.co.kr/report/result/result.jsp?BGt32ZKIygk%253D</span>
-        <iframe src="https://rewview.co.kr/report/result/result.jsp?BGt32ZKIygk%253D"
+        <span>4.https://rewview.co.kr/r/result/result.jsp?BGt32ZKIygk%253D</span>
+        <iframe src="https://rewview.co.kr/r/result/result.jsp?BGt32ZKIygk%253D"
         width="100%"
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
