--- a/test.html
+++ b/test.html
@@ -39,16 +39,16 @@ p {
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>4.https://rewview.co.kr/r/result/result.jsp?BGt32ZKIygk%253D</span>
-        <iframe src="https://rewview.co.kr/r/result/result.jsp?BGt32ZKIygk%253D"
+        <span>4.https://rewview.co.kr/r/result/report.jsp?vNsR12%252F0dJQ%253D</span>
+        <iframe src="https://rewview.co.kr/r/result/report.jsp?vNsR12%252F0dJQ%253D"
         width="100%"
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
     </div>
     <br>
     <div style="display: flex; flex-direction: column;">
-        <span>5.https://rewview.co.kr/cms/ReportGuest.wss?campaign_idx=LPHJCVPaJ5A%253D</span>
-        <iframe src="https://rewview.co.kr/cms/ReportGuest.wss?campaign_idx=LPHJCVPaJ5A%253D"
+        <span>5.https://rewview.co.kr/cms/ReportGuest.wss?campaign_idx=vNsR12%252F0dJQ%253D</span>
+        <iframe src="https://rewview.co.kr/cms/ReportGuest.wss?campaign_idx=vNsR12%252F0dJQ%253D"
         width="100%"
         height="300px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin" ></iframe>
