--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@ p {
         <span>1.https://rewd1w.rewview.co.kr/r/result/report.jsp?vNsR12%252F0dJQ%253D</span>
         <iframe src="https://rewd1w.rewview.co.kr/r/result/report.jsp?vNsR12%252F0dJQ%253D"
         width="100%"
-        height="500px"
+        height="600px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin allow-downloads" ></iframe>
     </div>
   <br>
     <div style="display: flex; flex-direction: column;">
-        <span>1.https://rewview.co.kr/r/result/report.jspvNsR12%252F0dJQ%253D</span>
-        <iframe src="https://rewview.co.kr/r/result/report.jspvNsR12%252F0dJQ%253D"
+        <span>2.https://rewview.co.kr/r/result/report.jsp?vNsR12%252F0dJQ%253D</span>
+        <iframe src="https://rewview.co.kr/r/result/report.jsp?vNsR12%252F0dJQ%253D"
         width="100%"
-        height="500px"
+        height="600px"
         style="border: none;" sandbox="allow-forms allow-scripts allow-popups allow-same-origin allow-downloads" ></iframe>
     </div>
   
